--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,571 @@
-/* место для вашего кода */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  width: 1440px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  background: #fff;
+}
+
+.header {
+  width: 1440px;
+  display: flex;
+  padding: 92px 50px;
+  align-items: flex-start;
+  flex: 1 0 0;
+  align-self: stretch;
+  flex-direction: row;
+}
+
+.nav {
+  width: 390px;
+  display: flex;
+  padding: 43px 0px;
+  align-items: flex-start;
+  gap: 13px;
+  flex-direction: row;
+  margin: auto;
+}
+
+.nav__item {
+  color: #000;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: none;
+  margin: auto;
+}
+
+.list_marker {
+  width: 7px;
+  height: 7px;
+  margin: auto;
+}
+
+.nav__item_two {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 1px;
+  margin: auto;
+}
+
+.line-two {
+  width: 148px;
+  height: 1px;
+}
+
+.line-three {
+  width: 108px;
+  height: 1px;
+}
+
+.logo-container {
+  display: flex;
+  padding: 0px 353px 4px 209px;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: auto;
+  background: #fff;
+}
+
+.logo-black {
+  width: 148px;
+  height: 105px;
+  margin: auto;
+}
+
+.address {
+  display: flex;
+  width: 240px;
+  padding-bottom: 5px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1px;
+}
+
+.address__item_two {
+  display: flex;
+  width: 240px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 1px;
+}
+
+.address__item {
+  width: 240px;
+  color: #000;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px; /* 135% */
+  text-decoration: none;
+}
+
+.line-four {
+  width: 132px;
+  height: 1px;
+}
+
+.address__item_three {
+  display: flex;
+  width: 240px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2px;
+}
+
+.line-five {
+  width: 130px;
+  height: 1px;
+}
+
+.main {
+  display: flex;
+  padding-bottom: 0px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 180px;
+  margin-bottom: 90px;
+}
+
+.cover {
+  width: 1440px;
+  flex: 1 0 0;
+  background-image: url("../images/cover.jpg");
+  background-repeat: no-repeat;
+  background-size: 1440px 758px;
+  flex-shrink: 0;
+}
+
+.overlay {
+  flex-shrink: 0;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.cover-container {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 135px;
+  margin-top: 165px;
+  margin-left: 0;
+  margin-bottom: 50px;
+}
+
+.cover__title {
+  width: 1440px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.aligned-text {
+  display: flex;
+  padding: 0px 1074px 0px 50px;
+  align-items: flex-start;
+  flex-direction: row;
+  margin: auto;
+}
+
+.letter-one {
+  color: #fff;
+  font-family: Raleway;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 115%;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.letter-two {
+  color: #fff;
+  font-family: Raleway;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 115%;
+  letter-spacing: 60px;
+  text-transform: uppercase;
+}
+
+.aligned-text_center {
+  width: 369px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin: auto;
+}
+
+.letter-three {
+  color: #fff;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.letter-four {
+  color: #fff;
+  font-family: Raleway;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 60px;
+  text-transform: uppercase;
+}
+
+.aligned-text_right {
+  display: flex;
+  padding: 0px 50px 0px 973px;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-direction: row;
+}
+
+.letter-five {
+  color: #fff;
+  text-align: right;
+  font-family: Raleway;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 60px;
+  text-transform: uppercase;
+}
+
+.letter-six {
+  color: #fff;
+  font-family: Raleway;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.letter-seven {
+  color: #fff;
+  font-family: Raleway;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  text-transform: uppercase;
+}
+
+.cover__description {
+  display: flex;
+  width: 1440px;
+  padding-right: 50px;
+  padding-left: 384px;
+  justify-content: flex-end;
+  align-items: flex-end;
+  gap: 78px;
+  flex-direction: row;
+  margin: auto;
+}
+
+.cover__description-text {
+  display: flex;
+  padding: 12px 0px;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 18px;
+  flex-direction: row;
+}
+
+.bet-button {
+  display: flex;
+  width: 257px;
+  padding: 13px 32px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  align-self: stretch;
+  border: 1px solid #fff;
+  background: rgba(255, 255, 255, 0);
+}
+
+.bet-button__title {
+  width: 193px;
+  height: 28px;
+  flex-shrink: 0;
+  color: #fff;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.lots {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.lots__heading {
+  display: flex;
+  padding: 0px 1229px 27px 90px;
+  justify-content: center;
+  align-items: flex-start;
+  color: #000;
+  font-family: Raleway;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  width: 1440px;
+  display: flex;
+  padding: 0px 50px;
+  align-items: flex-start;
+  gap: 25px;
+  flex-direction: row;
+}
+
+.card {
+  width: 430px;
+  flex: 1 0 0;
+  align-self: stretch;
+  margin: auto;
+}
+
+.card_type_film {
+  width: 430px;
+  height: 450px;
+  flex-shrink: 0;
+  background: url("../images/card-lot-01.jpg");
+  background-repeat: no-repeat;
+  background-size: 430px 450px;
+}
+
+.card__text {
+  display: inline-flex;
+  padding: 50px 40px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 202px;
+  margin: auto;
+}
+
+.title-link {
+  color: #fff;
+  font-family: Raleway;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+}
+
+.text-description {
+  color: #fff;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.card_type_book {
+  width: 430px;
+  height: 450px;
+  flex-shrink: 0;
+  background: url("../images/card-lot-02.jpg");
+  background-repeat: no-repeat;
+  background-size: 430px 450px;
+}
+
+.card__text_book {
+  display: inline-flex;
+  padding: 50px 40px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 30px;
+}
+
+.card_type_picture {
+  width: 430px;
+  height: 450px;
+  flex-shrink: 0;
+  background: url("../images/card-lot-03.jpg");
+  background-repeat: no-repeat;
+  background-size: 430px 450px;
+}
+
+.card__text_picture {
+  display: inline-flex;
+  padding: 50px 40px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 84px;
+}
+
+.lots__look-more {
+  display: flex;
+  padding: 30px 1158px 0px 90px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.lots-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2px;
+}
+
+.look-more {
+  color: #000;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.line-six {
+  width: 191px;
+  height: 1px;
+  background: #000;
+}
+
+.about {
+  display: flex;
+  padding: 0px 50px;
+  align-items: flex-start;
+  gap: 25px;
+  flex-direction: row;
+}
+
+.logo-column {
+  display: flex;
+  padding: 1px 95px 247px 95px;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.logo-ellipse {
+  width: 240px;
+  height: 240px;
+  background-color: #000;
+  border-radius: 250px;
+}
+
+.logo-white {
+  width: 148px;
+  height: 114px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 63px 46px;
+}
+
+.about-column {
+  display: flex;
+  padding-top: 101px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 100px;
+}
+
+.about-heading {
+  color: #000;
+  font-family: Raleway;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.about-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 25px;
+  color: #000;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.footer {
+  display: flex;
+  padding: 90px 50px;
+  align-items: flex-start;
+  gap: 355px;
+}
+
+.footer-address {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.footer-nav {
+  display: flex;
+  padding-bottom: 0px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__social-list {
+  display: flex;
+  padding-bottom: 0px;
+  align-items: flex-start;
+  gap: 48px;
+  flex-direction: row;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
+
+html {
+  scroll-behavior: smooth;
+}
