--- a/styles/style.css
+++ b/styles/style.css
@@ -1,35 +1,32 @@
 * {
   box-sizing: border-box;
-  margin: 0;
+  margin: auto;
   padding: 0;
 }
 
 body {
+  display: flex;
   width: 1440px;
-  display: inline-flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
   background: #fff;
 }
 
 .header {
-  width: 1440px;
   display: flex;
   padding: 92px 50px;
+  justify-content: center;
   align-items: flex-start;
   flex: 1 0 0;
   align-self: stretch;
-  flex-direction: row;
 }
 
 .nav {
-  width: 390px;
   display: flex;
-  padding: 43px 0px;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   gap: 13px;
-  flex-direction: row;
-  margin: auto;
 }
 
 .nav__item {
@@ -40,7 +37,6 @@ body {
   font-weight: 400;
   line-height: normal;
   text-decoration: none;
-  margin: auto;
 }
 
 .list_marker {
@@ -49,18 +45,28 @@ body {
   margin: auto;
 }
 
-.nav__item_two {
+.nav__item_one {
   display: flex;
+  width: 149px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  gap: 1px;
-  margin: auto;
+  gap: 2px;
 }
 
 .line-two {
   width: 148px;
   height: 1px;
+}
+
+.nav__item_two {
+  display: flex;
+  width: 108px;
+  height: 23px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2px;
 }
 
 .line-three {
@@ -70,23 +76,22 @@ body {
 
 .logo-container {
   display: flex;
+  width: 710px;
+  height: 109px;
   padding: 0px 353px 4px 209px;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: auto;
-  background: #fff;
+  align-items: center;
 }
 
 .logo-black {
   width: 148px;
   height: 105px;
-  margin: auto;
+  flex-shrink: 0;
 }
 
 .address {
   display: flex;
   width: 240px;
-  padding-bottom: 5px;
+  padding-bottom: 0px;
   flex-direction: column;
   align-items: flex-start;
   gap: 1px;
@@ -115,6 +120,7 @@ body {
 .line-four {
   width: 132px;
   height: 1px;
+  margin-left: 0;
 }
 
 .address__item_three {
@@ -129,14 +135,17 @@ body {
 .line-five {
   width: 130px;
   height: 1px;
+  margin-left: 0;
 }
 
 .main {
   display: flex;
+  width: 1440px;
   padding-bottom: 0px;
   flex-direction: column;
   align-items: flex-start;
   gap: 180px;
+  flex-shrink: 0;
   margin-bottom: 90px;
 }
 
@@ -145,39 +154,42 @@ body {
   flex: 1 0 0;
   background-image: url("../images/cover.jpg");
   background-repeat: no-repeat;
-  background-size: 1440px 758px;
+  background-size: 1440px 757px;
   flex-shrink: 0;
 }
 
 .overlay {
+  width: 1440px;
+  height: 757px;
   flex-shrink: 0;
   background: rgba(0, 0, 0, 0.6);
+  margin-top: 0;
 }
 
 .cover-container {
-  display: inline-flex;
+  display: flex;
+  width: 1440px;
+  padding: 165px 0px 49px 0px;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: flex-start;
   gap: 135px;
-  margin-top: 165px;
-  margin-left: 0;
-  margin-bottom: 50px;
 }
 
 .cover__title {
-  width: 1440px;
   display: flex;
+  width: 1440px;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
   gap: 20px;
 }
 
 .aligned-text {
   display: flex;
+  height: 115px;
   padding: 0px 1074px 0px 50px;
-  align-items: flex-start;
-  flex-direction: row;
-  margin: auto;
+  align-items: center;
 }
 
 .letter-one {
@@ -203,12 +215,10 @@ body {
 }
 
 .aligned-text_center {
-  width: 369px;
   display: flex;
-  justify-content: center;
+  height: 100px;
+  padding: 0px 565px 0px 506px;
   align-items: center;
-  flex-direction: row;
-  margin: auto;
 }
 
 .letter-three {
@@ -236,10 +246,10 @@ body {
 
 .aligned-text_right {
   display: flex;
+  height: 100px;
   padding: 0px 50px 0px 973px;
   justify-content: flex-end;
-  align-items: flex-end;
-  flex-direction: row;
+  align-items: center;
 }
 
 .letter-five {
@@ -278,17 +288,16 @@ body {
 .cover__description {
   display: flex;
   width: 1440px;
-  padding-right: 50px;
-  padding-left: 384px;
+  height: 52px;
+  padding: 0px 50px 0px 422px;
   justify-content: flex-end;
-  align-items: flex-end;
+  align-items: flex-start;
   gap: 78px;
-  flex-direction: row;
-  margin: auto;
 }
 
 .cover__description-text {
   display: flex;
+  height: 52px;
   padding: 12px 0px;
   justify-content: center;
   align-items: center;
@@ -300,8 +309,7 @@ body {
   font-weight: 400;
   line-height: 28px;
   text-transform: uppercase;
-  word-spacing: 18px;
-  flex-direction: row;
+  word-spacing: 16px;
 }
 
 .bet-button {
@@ -318,7 +326,6 @@ body {
 
 .bet-button__title {
   width: 193px;
-  height: 28px;
   flex-shrink: 0;
   color: #fff;
   text-align: center;
@@ -332,17 +339,17 @@ body {
 
 .lots {
   display: flex;
+  width: 1440px;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  margin: auto;
+  align-items: flex-start;
 }
 
 .lots__heading {
   display: flex;
+  height: 74px;
   padding: 0px 1229px 27px 90px;
-  justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   color: #000;
   font-family: Raleway;
   font-size: 40px;
@@ -353,37 +360,44 @@ body {
 }
 
 .lots__card-list {
-  width: 1440px;
   display: flex;
+  width: 1440px;
+  height: 450px;
   padding: 0px 50px;
+  justify-content: center;
   align-items: flex-start;
   gap: 25px;
-  flex-direction: row;
 }
 
 .card {
-  width: 430px;
   flex: 1 0 0;
   align-self: stretch;
-  margin: auto;
 }
 
 .card_type_film {
   width: 430px;
   height: 450px;
   flex-shrink: 0;
-  background: url("../images/card-lot-01.jpg");
+  background: url("../images/card-lot-01.jpg"), lightgray 50%;
   background-repeat: no-repeat;
   background-size: 430px 450px;
 }
 
+.overlay-card {
+  width: 430px;
+  height: 450px;
+  flex-shrink: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
 .card__text {
-  display: inline-flex;
+  display: flex;
+  width: 430px;
   padding: 50px 40px;
   flex-direction: column;
+  justify-content: center;
   align-items: flex-start;
   gap: 202px;
-  margin: auto;
 }
 
 .title-link {
@@ -410,15 +424,17 @@ body {
   width: 430px;
   height: 450px;
   flex-shrink: 0;
-  background: url("../images/card-lot-02.jpg");
+  background: url("../images/card-lot-02.jpg"), lightgray 50%;
   background-repeat: no-repeat;
   background-size: 430px 450px;
 }
 
 .card__text_book {
-  display: inline-flex;
+  display: flex;
+  width: 430px;
   padding: 50px 40px;
   flex-direction: column;
+  justify-content: center;
   align-items: flex-start;
   gap: 30px;
 }
@@ -427,33 +443,35 @@ body {
   width: 430px;
   height: 450px;
   flex-shrink: 0;
-  background: url("../images/card-lot-03.jpg");
+  background: url("../images/card-lot-03.jpg"), lightgray 50%;
   background-repeat: no-repeat;
   background-size: 430px 450px;
 }
 
 .card__text_picture {
-  display: inline-flex;
-  padding: 50px 40px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 84px;
+  display: flex;
+width: 430px;
+padding: 50px 40px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 84px;
 }
 
 .lots__look-more {
   display: flex;
-  padding: 30px 1158px 0px 90px;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-start;
+height: 55px;
+padding: 30px 1158px 0px 90px;
+align-items: center;
 }
 
 .lots-block {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 2px;
+width: 192px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 2px;
 }
 
 .look-more {
@@ -463,6 +481,7 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-decoration: none;
 }
 
 .line-six {
@@ -473,41 +492,51 @@ body {
 
 .about {
   display: flex;
-  padding: 0px 50px;
-  align-items: flex-start;
-  gap: 25px;
-  flex-direction: row;
+width: 1440px;
+height: 488px;
+padding: 0px 50px;
+justify-content: center;
+align-items: flex-start;
+gap: 25px;
+flex-shrink: 0;
 }
 
 .logo-column {
   display: flex;
-  padding: 1px 95px 247px 95px;
-  flex-direction: column;
-  align-items: flex-start;
+width: 430px;
+height: 488px;
+padding: 1px 95px 247px 95px;
+flex-direction: column;
+align-items: center;
+flex-shrink: 0;
 }
 
 .logo-ellipse {
   width: 240px;
-  height: 240px;
+height: 240px;
+flex-shrink: 0;
   background-color: #000;
   border-radius: 250px;
 }
 
 .logo-white {
-  width: 148px;
-  height: 114px;
+  width: 146px;
+  height: 113px;
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  margin: 63px 46px;
+  margin: 63px 47px;
 }
 
 .about-column {
   display: flex;
-  padding-top: 101px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 100px;
+width: 885px;
+padding-top: 101px;
+flex-direction: column;
+justify-content: flex-end;
+align-items: flex-start;
+gap: 100px;
+flex-shrink: 0;
 }
 
 .about-heading {
@@ -535,30 +564,69 @@ body {
 
 .footer {
   display: flex;
-  padding: 90px 50px;
-  align-items: flex-start;
-  gap: 355px;
+height: 277px;
+padding: 90px 50px 78px 50px;
+justify-content: center;
+align-items: flex-start;
+gap: 356px;
+flex-shrink: 0;
 }
 
 .footer-address {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+width: 240px;
+height: 109px;
+padding-bottom: 0px;
+flex-direction: column;
+align-items: flex-start;
+gap: 1px;
 }
 
 .footer-nav {
   display: flex;
-  padding-bottom: 0px;
-  flex-direction: column;
-  align-items: center;
+width: 149px;
+padding-bottom: 0px;
+flex-direction: column;
+align-items: center;
+padding-bottom: 44px;
+}
+
+.footer-nav_item {
+  color: #000;
+text-align: center;
+font-family: Raleway;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+text-decoration: none;
+}
+
+.footer-nav__item_two {
+  display: flex;
+width: 149px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+}
+
+.footer-nav__item_three {
+  display: flex;
+width: 108px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 1px;
 }
 
 .footer__social-list {
   display: flex;
-  padding-bottom: 0px;
-  align-items: flex-start;
-  gap: 48px;
-  flex-direction: row;
+width: 240px;
+height: 109px;
+padding-bottom: 61px;
+justify-content: center;
+align-items: flex-start;
+gap: 48px;
 }
 
 .footer__social-icon {
