--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,13 @@ body {
   min-width: 1100px;
   margin: 0;
   font-family: Raleway, sans-serif;
-    
+  display: flex;
+  max-width: 1440px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background: #fff;
+  margin: auto;  
 }
 
 h1,
