--- a/styles/style.css
+++ b/styles/style.css
@@ -4,181 +4,152 @@
   padding: 0;
 }
 
-body {
-  display: flex;
-  width: 1440px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  background: #fff;
-}
-
 .header {
-  display: flex;
-  padding: 92px 50px;
-  justify-content: center;
-  align-items: flex-start;
-  flex: 1 0 0;
-  align-self: stretch;
-}
-
-.nav {
-  display: flex;
-  justify-content: center;
+  display: inline-flex;
+  padding: 0px 50px;
   align-items: center;
-  gap: 13px;
+  margin-top: 92px;
+  margin-bottom: 92px;
 }
 
-.nav__item {
+.header__menu {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  flex-direction: row;
+}
+
+.header__links-list {
+  min-width: 387px;
+  display: flex;
+  align-items: flex-start;
+  gap: 32px;
+  flex-direction: row;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header__link {
   text-decoration: none;
 }
 
-.list_marker {
-  width: 7px;
-  height: 7px;
-  margin: auto;
+.header__links-list-item {
+  list-style-type: circle;
 }
 
-.nav__item_one {
+.header__link_active {
+  text-decoration: none;
+  display: inline-block;
+  border-bottom: 1px solid black;
+  padding-bottom: 0;
+}
+
+.header__logo {
   display: flex;
-  width: 149px;
+  max-width: 1340px;
+  padding: 4px 355px 0 210px;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 2px;
-}
-
-.line-two {
-  width: 148px;
-  height: 1px;
-}
-
-.nav__item_two {
-  display: flex;
-  width: 108px;
-  height: 23px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 2px;
-}
-
-.line-three {
-  width: 108px;
-  height: 1px;
-}
-
-.logo-container {
-  display: flex;
-  width: 710px;
-  height: 109px;
-  padding: 0px 353px 4px 209px;
   align-items: center;
 }
 
-.logo-black {
-  width: 148px;
-  height: 105px;
+.header__logo-image {
+  min-width: 148px;
+  max-height: 105px;
   flex-shrink: 0;
 }
 
-.address {
+.header-address {
   display: flex;
-  width: 240px;
-  padding-bottom: 0px;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: flex-start;
-  gap: 1px;
-}
-
-.address__item_two {
-  display: flex;
-  width: 240px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 1px;
-}
-
-.address__item {
-  width: 240px;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24.3px; /* 135% */
+  line-height: 24.3px;
+}
+
+.header-address__container {
+  min-width: 240px;
+}
+
+.address__item_line {
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
   text-decoration: none;
+  display: inline-block;
+  border-bottom: 1px solid black;
+  padding-bottom: 0;
 }
 
-.line-four {
-  width: 132px;
-  height: 1px;
-  margin-left: 0;
-}
-
-.address__item_three {
-  display: flex;
-  width: 240px;
-  flex-direction: column;
-  justify-content: center;
+.address__item {
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
+  justify-content: flex-start;
   align-items: flex-start;
-  gap: 2px;
-}
-
-.line-five {
-  width: 130px;
-  height: 1px;
-  margin-left: 0;
 }
 
 .main {
   display: flex;
-  width: 1440px;
+  max-width: 1440px;
   padding-bottom: 0px;
   flex-direction: column;
   align-items: flex-start;
-  gap: 180px;
   flex-shrink: 0;
   margin-bottom: 90px;
 }
 
 .cover {
-  width: 1440px;
-  flex: 1 0 0;
+  max-width: 1440px;
+  max-height: 757px;
   background-image: url("../images/cover.jpg");
-  background-repeat: no-repeat;
-  background-size: 1440px 757px;
+  background-position: center;
   flex-shrink: 0;
+  margin-bottom: 90px;
+  position: relative;
+  z-index: 0;
 }
 
 .overlay {
-  width: 1440px;
-  height: 757px;
   flex-shrink: 0;
-  background: rgba(0, 0, 0, 0.6);
-  margin-top: 0;
+  background-position: 100% 100%;
+  background-size: 1440px 757px;
+  position: absolute;
+  z-index: -1;
 }
 
 .cover-container {
   display: flex;
-  width: 1440px;
+  max-width: 1440px;
   padding: 165px 0px 49px 0px;
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
   gap: 135px;
+  z-index: 1;
 }
 
 .cover__title {
   display: flex;
-  width: 1440px;
+  max-width: 1440px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -187,108 +158,61 @@ body {
 
 .aligned-text {
   display: flex;
-  height: 115px;
+  max-height: 115px;
   padding: 0px 1074px 0px 50px;
   align-items: center;
-}
-
-.letter-one {
   color: #fff;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-size: 100px;
   font-style: normal;
   font-weight: 700;
   line-height: 115%;
-  letter-spacing: 30px;
-  text-transform: uppercase;
-}
-
-.letter-two {
-  color: #fff;
-  font-family: Raleway;
-  font-size: 100px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 115%;
-  letter-spacing: 60px;
   text-transform: uppercase;
 }
 
 .aligned-text_center {
   display: flex;
-  height: 100px;
+  max-height: 100px;
   padding: 0px 565px 0px 506px;
   align-items: center;
-}
-
-.letter-three {
   color: #fff;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  text-transform: uppercase;
   text-align: center;
-  font-family: Raleway;
-  font-size: 100px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 100%;
-  letter-spacing: 30px;
-  text-transform: uppercase;
-}
-
-.letter-four {
-  color: #fff;
-  font-family: Raleway;
-  font-size: 100px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 100%;
-  letter-spacing: 60px;
-  text-transform: uppercase;
 }
 
 .aligned-text_right {
   display: flex;
-  height: 100px;
+  max-height: 100px;
   padding: 0px 50px 0px 973px;
   justify-content: flex-end;
   align-items: center;
-}
-
-.letter-five {
   color: #fff;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  text-transform: uppercase;
   text-align: right;
-  font-family: Raleway;
-  font-size: 100px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 100%;
+}
+
+.letter-wider {
   letter-spacing: 60px;
-  text-transform: uppercase;
 }
 
-.letter-six {
-  color: #fff;
-  font-family: Raleway;
-  font-size: 100px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 100%;
+.letter-tight {
   letter-spacing: 30px;
-  text-transform: uppercase;
-}
-
-.letter-seven {
-  color: #fff;
-  font-family: Raleway;
-  font-size: 100px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 100%;
-  text-transform: uppercase;
 }
 
 .cover__description {
   display: flex;
-  width: 1440px;
-  height: 52px;
+  max-width: 1440px;
+  max-height: 52px;
   padding: 0px 50px 0px 422px;
   justify-content: flex-end;
   align-items: flex-start;
@@ -297,13 +221,13 @@ body {
 
 .cover__description-text {
   display: flex;
-  height: 52px;
+  max-height: 52px;
   padding: 12px 0px;
   justify-content: center;
   align-items: center;
   color: #fff;
   text-align: center;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -314,7 +238,7 @@ body {
 
 .bet-button {
   display: flex;
-  width: 257px;
+  max-width: 257px;
   padding: 13px 32px;
   justify-content: center;
   align-items: center;
@@ -325,11 +249,11 @@ body {
 }
 
 .bet-button__title {
-  width: 193px;
+  max-width: 193px;
   flex-shrink: 0;
   color: #fff;
   text-align: center;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -339,19 +263,19 @@ body {
 
 .lots {
   display: flex;
-  width: 1440px;
   flex-direction: column;
-  justify-content: center;
   align-items: flex-start;
+  padding-top: 90px;
+  margin-bottom: 90px;
 }
 
 .lots__heading {
   display: flex;
-  height: 74px;
+  max-width: 1440px;
   padding: 0px 1229px 27px 90px;
   align-items: center;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -361,48 +285,63 @@ body {
 
 .lots__card-list {
   display: flex;
-  width: 1440px;
-  height: 450px;
   padding: 0px 50px;
-  justify-content: center;
   align-items: flex-start;
   gap: 25px;
+  flex: 1 0 0;
+  align-self: stretch;
+  flex-direction: row;
+}
+
+.card-link {
+  max-width: 430px;
+  max-height: 450px;
+  text-decoration: none;
 }
 
 .card {
+  max-width: 430px;
+  max-height: 450px;
   flex: 1 0 0;
   align-self: stretch;
 }
 
 .card_type_film {
-  width: 430px;
-  height: 450px;
+  max-width: 430px;
+  max-height: 450px;
+  flex: 1 0 0;
+  align-self: stretch;
   flex-shrink: 0;
   background: url("../images/card-lot-01.jpg"), lightgray 50%;
   background-repeat: no-repeat;
   background-size: 430px 450px;
+  position: relative;
+  z-index: 0;
 }
 
 .overlay-card {
-  width: 430px;
-  height: 450px;
-  flex-shrink: 0;
-  background-color: rgba(0, 0, 0, 0.6);
+  max-width: 430px;
+  max-height: 450px;
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
+  position: absolute;
+  z-index: -1;
 }
 
 .card__text {
   display: flex;
-  width: 430px;
+  max-width: 430px;
   padding: 50px 40px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   gap: 202px;
+  z-index: 1;
 }
 
 .title-link {
   color: #fff;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
@@ -413,7 +352,7 @@ body {
 
 .text-description {
   color: #fff;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -421,17 +360,21 @@ body {
 }
 
 .card_type_book {
-  width: 430px;
-  height: 450px;
+  max-width: 430px;
+  max-height: 450px;
+  flex: 1 0 0;
+  align-self: stretch;
   flex-shrink: 0;
   background: url("../images/card-lot-02.jpg"), lightgray 50%;
   background-repeat: no-repeat;
   background-size: 430px 450px;
+  position: relative;
+  z-index: 0;
 }
 
 .card__text_book {
   display: flex;
-  width: 430px;
+  max-width: 430px;
   padding: 50px 40px;
   flex-direction: column;
   justify-content: center;
@@ -440,17 +383,21 @@ body {
 }
 
 .card_type_picture {
-  width: 430px;
-  height: 450px;
+  max-width: 430px;
+  max-height: 450px;
+  flex: 1 0 0;
+  align-self: stretch;
   flex-shrink: 0;
   background: url("../images/card-lot-03.jpg"), lightgray 50%;
   background-repeat: no-repeat;
   background-size: 430px 450px;
+  position: relative;
+  z-index: 0;
 }
 
 .card__text_picture {
   display: flex;
-  width: 430px;
+  max-width: 430px;
   padding: 50px 40px;
   flex-direction: column;
   justify-content: center;
@@ -467,44 +414,41 @@ body {
 
 .lots-block {
   display: flex;
-  width: 192px;
+  max-width: 192px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  gap: 2px;
 }
 
 .look-more {
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   text-decoration: none;
-}
-
-.line-six {
-  width: 191px;
-  height: 1px;
-  background: #000;
+  display: inline-block;
+  border-bottom: 1px solid black;
+  padding-bottom: 0;
 }
 
 .about {
   display: flex;
-  width: 1440px;
-  height: 488px;
+  max-width: 1440px;
+  max-width: 488px;
   padding: 0px 50px;
   justify-content: center;
   align-items: flex-start;
   gap: 25px;
   flex-shrink: 0;
+  margin-top: 90px;
 }
 
 .logo-column {
   display: flex;
-  width: 430px;
-  height: 488px;
+  max-width: 430px;
+  max-height: 488px;
   padding: 1px 95px 247px 95px;
   flex-direction: column;
   align-items: center;
@@ -512,16 +456,16 @@ body {
 }
 
 .logo-ellipse {
-  width: 240px;
-  height: 240px;
+  max-width: 240px;
+  max-height: 240px;
   flex-shrink: 0;
   background-color: #000;
-  border-radius: 250px;
+  border-radius: 50%;
 }
 
-.logo-white {
-  width: 146px;
-  height: 113px;
+.logo-image {
+  max-width: 146px;
+  max-height: 113px;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -530,7 +474,7 @@ body {
 
 .about-column {
   display: flex;
-  width: 885px;
+  max-width: 885px;
   padding-top: 101px;
   flex-direction: column;
   justify-content: flex-end;
@@ -541,7 +485,7 @@ body {
 
 .about-heading {
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -555,7 +499,7 @@ body {
   align-items: flex-start;
   gap: 25px;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -563,34 +507,38 @@ body {
 }
 
 .footer {
-  display: flex;
-  height: 277px;
-  padding: 90px 50px 78px 50px;
-  justify-content: center;
+  display: inline-flex;
+  padding: 90px 50px;
   align-items: flex-start;
   gap: 356px;
-  flex-shrink: 0;
+  flex-direction: row;
 }
 
 .footer-address {
-  display: flex;
-  width: 240px;
-  height: 109px;
-  padding-bottom: 0px;
+  max-width: 240px;
+  max-height: 99px;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1px;
+  margin-top: 0;
 }
 
-.footer-nav {
+.footer-address__container {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.footer-menu {
+  min-width: 149px;
   display: flex;
-  width: 149px;
+  padding-bottom: 0px;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 44px;
+  margin-bottom: 34px;
+  margin-top: 0;
 }
 
-.footer-nav_item {
+.footer__links-list {
   color: #000;
   text-align: center;
   font-family: Raleway;
@@ -598,30 +546,27 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.footer__links-list-item {
+  list-style-type: none;
+}
+
+.footer__link {
   text-decoration: none;
 }
 
-.footer-nav__item_two {
-  display: flex;
-  width: 149px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.footer-nav__item_three {
-  display: flex;
-  width: 108px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 1px;
+.footer__link_active {
+  text-decoration: none;
+  display: inline-block;
+  border-bottom: 1px solid black;
+  padding-bottom: 0;
 }
 
 .footer__social-list {
   display: flex;
-  width: 240px;
-  height: 109px;
+  max-width: 240px;
+  max-height: 109px;
   padding-bottom: 61px;
   justify-content: center;
   align-items: flex-start;
@@ -629,8 +574,8 @@ body {
 }
 
 .footer__social-icon {
-  width: 48px;
-  height: 48px;
+  max-width: 48px;
+  max-height: 48px;
 }
 
 html {
