--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,7 @@
 
 body {
   min-width: 1100px;
-  margin: 0;
+  margin: 0 auto;
   font-family: Raleway, sans-serif;
   display: flex;
   max-width: 1440px;
@@ -14,7 +14,7 @@ body {
   justify-content: center;
   align-items: flex-start;
   background: #fff;
-  margin: auto;  
+
 }
 
 h1,
