--- a/styles/style.css
+++ b/styles/style.css
@@ -436,7 +436,7 @@
 .about {
   display: flex;
   max-width: 1440px;
-  max-width: 488px;
+  max-height: 488px;
   padding: 0px 50px;
   justify-content: center;
   align-items: flex-start;
