--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,9 @@
 }
 
 .header {
-  max-width: 1440px;
+  width: 100%;
   display: inline-flex;
-  padding: 0px 50px;
+  padding: 0% 3.4%;
   align-items: center;
   margin-top: 92px;
   margin-bottom: 92px;
@@ -21,8 +21,8 @@
 }
 
 .header__links-list {
-  min-width: 387px;
   display: flex;
+  width: 387px;
   align-items: flex-start;
   gap: 32px;
   flex-direction: row;
@@ -55,8 +55,7 @@
 
 .header__logo {
   display: flex;
-  max-width: 1340px;
-  padding: 4px 355px 0 210px;
+  padding: 4px 354px 0 209px;
   flex-direction: column;
   align-items: center;
 }
