--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,16 @@
   padding: 0;
 }
 
+body {
+  display: flex;
+  max-width: 1440px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background: #fff;
+  margin: auto;
+}
+
 .header {
   width: 100%;
   display: inline-flex;
@@ -22,9 +32,9 @@
 
 .header__links-list {
   display: flex;
-  width: 387px;
+  min-width: 387px;
   align-items: flex-start;
-  gap: 32px;
+  gap: 30px;
   flex-direction: row;
   color: #000;
   font-family: Raleway, Arial, Helvetica, sans-serif;
@@ -530,7 +540,7 @@
 }
 
 .footer-menu {
-  min-width: 149px;
+  min-width: 154px;
   display: flex;
   padding-bottom: 0px;
   flex-direction: column;
