--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,7 @@ body {
 
 .header__logo {
   display: flex;
-  padding: 4px 354px 0 208px;
+  padding: 4px 352px 0 208px;
   flex-direction: column;
   align-items: center;
 }
@@ -350,6 +350,7 @@ body {
 }
 
 .title-link {
+  max-width: 350px;
   color: #fff;
   font-family: Raleway, Arial, Helvetica, sans-serif;
   font-size: 22px;
