--- a/styles/style.css
+++ b/styles/style.css
@@ -295,7 +295,8 @@ body {
 
 .lots__card-list {
   display: flex;
-  padding: 0px 50px;
+  min-width: 430px;
+  min-height: 450px;
   align-items: flex-start;
   gap: 25px;
   flex: 1 0 0;
@@ -303,22 +304,9 @@ body {
   flex-direction: row;
 }
 
-.card-link {
-  max-width: 430px;
-  max-height: 450px;
-  text-decoration: none;
-}
-
-.card {
-  max-width: 430px;
-  max-height: 450px;
-  flex: 1 0 0;
-  align-self: stretch;
-}
-
 .card_type_film {
-  max-width: 430px;
-  max-height: 450px;
+  min-width: 430px;
+  min-height: 450px;
   flex: 1 0 0;
   align-self: stretch;
   flex-shrink: 0;
@@ -330,8 +318,8 @@ body {
 }
 
 .overlay-card {
-  max-width: 430px;
-  max-height: 450px;
+  min-width: 430px;
+  min-height: 450px;
   background-position: 100% 100%;
   background-repeat: no-repeat;
   position: absolute;
@@ -341,6 +329,7 @@ body {
 .card__text {
   display: flex;
   max-width: 430px;
+  max-height: 450px;
   padding: 50px 40px;
   flex-direction: column;
   justify-content: center;
