--- a/styles/style.css
+++ b/styles/style.css
@@ -330,10 +330,9 @@ align-self: stretch;
   z-index: -1;
 }
 
-.card__text {
+.card__text_film {
   display: flex;
   max-width: 430px;
-  max-height: 450px;
   padding: 50px 38px;
   flex-direction: column;
   justify-content: center;
