--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,13 @@ body {
   min-width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  display: flex;
+  max-width: 1440px;
+  max-height: 2844px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background: #fff;
 
 }
 
