--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,575 @@
-/* место для вашего кода */
+.header {
+  width: 1440px;
+  display: inline-flex;
+  padding: 92px 50px;
+  align-items: center;
+  margin: 0;
+}
+
+.header__menu {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  flex-direction: row;
+}
+
+.header__links-list {
+  display: flex;
+  width: 392px;
+  align-items: flex-start;
+  gap: 30px;
+  flex-direction: row;
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header__link {
+  text-decoration: none;
+}
+
+.header__links-list-item {
+  list-style-type: circle;
+}
+
+.header__link_active {
+  text-decoration: none;
+  display: inline-block;
+  border-bottom: 1px solid black;
+  padding-bottom: 0;
+}
+
+.header__logo {
+  display: flex;
+  padding: 4px 352px 0 208px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+  flex-shrink: 0;
+}
+
+.header-address {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
+}
+
+.header-address__container {
+  width: 240px;
+}
+
+.address__item_line {
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
+  text-decoration: none;
+  display: inline-block;
+  border-bottom: 1px solid black;
+  padding-bottom: 0;
+}
+
+.address__item {
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.main {
+  display: flex;
+  width: 1440px;
+  padding-bottom: 0px;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-shrink: 0;
+  margin-bottom: 90px;
+}
+
+.cover {
+  width: 1440px;
+  height: 757px;
+  background-image: url("../images/cover.jpg");
+  background-position: center;
+  background-size: cover;
+  flex-shrink: 0;
+  margin-bottom: 90px;
+  position: relative;
+  z-index: 0;
+}
+
+.overlay {
+  flex-shrink: 0;
+  background-position: 100% 100%;
+  background-size: 1440px 757px;
+  position: absolute;
+  z-index: -1;
+}
+
+.cover-container {
+  display: flex;
+  width: 1440px;
+  padding: 165px 0px 49px 0px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 135px;
+  z-index: 1;
+}
+
+.cover__title {
+  display: flex;
+  width: 1440px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.aligned-text {
+  display: flex;
+  height: 115px;
+  padding: 0px 1074px 0px 50px;
+  align-items: center;
+  color: #fff;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 115%;
+  text-transform: uppercase;
+}
+
+.aligned-text_center {
+  display: flex;
+  height: 100px;
+  padding: 0px 565px 0px 506px;
+  align-items: center;
+  color: #fff;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.aligned-text_right {
+  display: flex;
+  height: 100px;
+  padding: 0px 50px 0px 973px;
+  justify-content: flex-end;
+  align-items: center;
+  color: #fff;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  text-transform: uppercase;
+  text-align: right;
+}
+
+.letter-wider {
+  letter-spacing: 60px;
+}
+
+.letter-tight {
+  letter-spacing: 30px;
+}
+
+.cover__description {
+  display: flex;
+  width: 1440px;
+  height: 52px;
+  padding: 0px 50px 0px 422px;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 78px;
+}
+
+.cover__description-text {
+  display: flex;
+  height: 52px;
+  padding: 12px 0px;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-align: center;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 16px;
+}
+
+.bet-button {
+  display: flex;
+  width: 257px;
+  padding: 13px 32px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  align-self: stretch;
+  border: 1px solid #fff;
+  background: rgba(255, 255, 255, 0);
+}
+
+.bet-button__title {
+  width: 193px;
+  flex-shrink: 0;
+  color: #fff;
+  text-align: center;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.lots {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-top: 90px;
+  margin-bottom: 90px;
+}
+
+.lots__heading {
+  display: flex;
+  width: 1440px;
+  padding-left: 90px;
+  padding-bottom: 27px;
+  align-items: center;
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  width: 1440px;
+  height: 450px;
+  padding: 0 50px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 25px;
+  flex-direction: row;
+}
+
+.card-link {
+  flex: 1 0 0;
+  align-self: stretch;
+}
+
+.card_type_film {
+  width: 430px;
+  height: 450px;
+  flex-shrink: 0;
+  background: url("../images/card-lot-01.jpg"), lightgray 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+}
+
+.overlay-card {
+  width: 430px;
+  height: 450px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  position: absolute;
+  z-index: -1;
+}
+
+.card__text_film {
+  display: flex;
+  width: 430px;
+  padding: 50px 38px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 202px;
+}
+
+.title-link {
+  color: #fff;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+}
+
+.text-description {
+  color: #fff;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.card_type_book {
+  width: 430px;
+  height: 450px;
+  flex-shrink: 0;
+  background: url("../images/card-lot-02.jpg"), lightgray 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+}
+
+.card__text_book {
+  display: flex;
+  width: 430px;
+  padding: 50px 40px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 30px;
+}
+
+.card_type_picture {
+  width: 430px;
+  height: 450px;
+  background: url("../images/card-lot-03.jpg"), lightgray 50%;
+  flex-shrink: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+}
+
+.card__text_picture {
+  display: flex;
+  width: 430px;
+  padding: 50px 40px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 84px;
+}
+
+.lots__look-more {
+  display: flex;
+  width: 1440px;
+  height: 55px;
+  padding-top: 30px;
+  padding-left: 90px;
+  padding-right: 1158px;
+  align-items: center;
+}
+
+.lots-block {
+  display: flex;
+  width: 192px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.look-more {
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: none;
+  display: inline-block;
+  border-bottom: 1px solid black;
+  padding-bottom: 0;
+}
+
+.about {
+  display: flex;
+  width: 1440px;
+  height: 488px;
+  padding: 0px 50px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 25px;
+  flex-shrink: 0;
+  margin-top: 90px;
+}
+
+.logo-column {
+  display: flex;
+  width: 430px;
+  height: 488px;
+  padding: 1px 95px 247px 95px;
+  flex-direction: column;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+.logo-ellipse {
+  width: 240px;
+  height: 240px;
+  flex-shrink: 0;
+  background-color: #000;
+  border-radius: 50%;
+}
+
+.logo-image {
+  width: 146px;
+  height: 113px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 63px 47px;
+}
+
+.about-column {
+  display: flex;
+  width: 885px;
+  padding-top: 101px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 100px;
+  flex-shrink: 0;
+}
+
+.about-heading {
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.about-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 25px;
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.footer {
+  display: flex;
+  padding: 90px 50px;
+  align-items: flex-start;
+  gap: 356px;
+  flex-direction: row;
+}
+
+.footer-address {
+  display: flex;
+  width: 240px;
+  height: 99px;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 0;
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
+}
+
+.footer-address__container {
+  width: 240px;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.footer-menu {
+  width: 154px;
+  display: flex;
+  padding-bottom: 0px;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 34px;
+  margin-top: 0;
+}
+
+.footer__links-list {
+  color: #000;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.footer__links-list-item {
+  list-style-type: none;
+}
+
+.footer__link {
+  text-decoration: none;
+}
+
+.footer__link_active {
+  text-decoration: none;
+  display: inline-block;
+  border-bottom: 1px solid black;
+  padding-bottom: 0;
+}
+
+.footer__social-list {
+  display: flex;
+  width: 240px;
+  height: 109px;
+  padding-bottom: 61px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 48px;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
+
+html {
+  scroll-behavior: smooth;
+}
